# email-extractor

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 78f509b95848_initial_email_extractor_schema.py  a1b2c3d4e5f6_add_verification_runs.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: email_extractor.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py
backend/app/schemas/: email_extractor.py
backend/app/services/email_extractor/: aggregator.py  base.py  hunter.py  snov.py  theharvester.py  verification.py
backend/app/tests/: test_main.py
backend/app/tests/api/: test_verify_endpoint.py
backend/app/tests/services/email_extractor/: test_aggregator.py  test_hunter.py  test_snov.py  test_theharvester.py
frontend/: .env.example  Dockerfile  next.config.mjs
plans/: initial-scaffold-2026-04-19.md  vps-staging-setup-2026-04-19.md
prompts/: 2026-04-19-0840-initial-scaffold.md  2026-04-19-0845-docker-stack-setup.md  2026-04-19-0916-vps-staging-setup.md  2026-04-19-1049-frontend-public-dir-fix.md  2026-04-19-1103-parameterize-frontend-host-port.md  2026-04-19-1112-psycopg-driver-alignment.md  2026-04-19-1123-initial-domain-models.md  2026-04-19-1343-apply-initial-migration-to-vps.md  2026-04-19-1415-site-crawler-provider.md  README.md  TEMPLATE.md
scripts/: verify.sh
(+6 files in other folders)
